updated configs 3.5.2 archriot

--- a/config/hypr/keybindings.conf
+++ b/config/hypr/keybindings.conf
@@ -6,16 +6,9 @@
 # - Run `generate_keybindings_help` and bind to $webapp="file:///path/to/help.html".
 # =================================================================================================
 
-# Default MOD key
-$mod = SUPER
-
-# Default applications
-$terminal = ghostty
+# Custom apps:
 $altterminal = kitty
 $dropterm = xterm -bg black -fg white -fa 'Monospace' -fs 12 -e bash
-$fileManager = Thunar
-$browser = brave --disable-features=WaylandWpColorManagerV1 --enable-features=VaapiVideoDecoder,VaapiIgnoreDriverChecks,Vulkan,DefaultANGLEVulkan,VulkanFromANGLE,UseOzonePlatform --ozone-platform=wayland --enable-gpu-rasterization --enable-zero-copy --ignore-gpu-blocklist
-$webapp = $browser --force-device-scale-factor=1 --high-dpi-support=1 --app
 $altbrowser = firefox
 
 # -------------------------------------------------------------------------------------------------
@@ -37,11 +30,14 @@ bind = $mod, E, exec, $fileManager  # Thunar file manager
 
 # Default MPD player
 unbind = $mod, R
-# bind = $mod, R, exec, $altterminal --class=mpd-player -e rmpc # MPD Player
 bind = $mod, R, exec, $altterminal --class=mpd-player -o background_opacity=0.5 -e rmpc # MPD Player
 # System monitor
 unbind = $mod, T
 bind = $mod, T, exec, $terminal -e btop  # System Monitor
+
+# Wallet
+unbind = $mod SHIFT, R
+bind = $mod SHIFT, R, exec, $HOME/.local/share/archriot/install/archriot --wallet
 
 # Default Editors
 unbind = $mod, N
@@ -49,7 +45,7 @@ bind = $mod, N, exec, $terminal -e nvim  # NeoVim
 unbind = $mod, C
 bind = $mod, C, exec, DRI_PRIME=1 code  # VSCode
 unbind = $mod, Z
-bind = $mod, Z, exec, zed  # Zed
+bind = $mod, Z, exec, $HOME/.local/share/archriot/install/archriot --zed  # Zed
 
 # Default and Alt Browsers
 unbind = $mod, B
@@ -77,28 +73,30 @@ bind = $mod, backspace, exec, $HOME/bin/hyprland_openall
 
 # Control Panel
 unbind = $mod, F12
-bind = $mod, F12, exec, notify-send "Opening Control Panel..." && DISPLAY=:0 $HOME/.local/share/archriot/config/bin/archriot-control-panel  # Control Panel
+bind = $mod, F12, exec, notify-send "Opening Control Panel..." && DISPLAY=:0 $HOME/.local/share/archriot/config/bin/archriot-control-panel  # ArchRiot Control Panel
 
 # Pomodoro Timer
 unbind = $mod, comma
-# bind = $mod, comma, exec, $HOME/.local/share/archriot/config/bin/scripts/waybar-tomato-click.sh  # Pomodoro Timer
+bind = $mod, comma, exec, $HOME/.local/share/archriot/install/archriot --pomodoro-click  # Pomodoro Timer
 
 # Help system
 unbind = $mod, H
+unbind = $mod CTRL, H
 unbind = $mod SHIFT, H
 bind = $mod, H, exec, $webapp="file:///home/tarso/help.html"  # Keybind Mapping
-bind = $mod SHIFT, H, exec, $browser --class=archriot-help --app="https://archriot.org"  # Help System
+bind = $mod CTRL, H, exec, $HOME/.local/share/archriot/install/archriot --help-binds-gtk  # ArchRiot Default Keymapper
+bind = $mod SHIFT, H, exec, $browser --class=archriot-help --app="https://archriot.org"   # ArchRiot Help System
 
 # Waybar toggle and theme switch
 unbind = $mod SHIFT, SPACE
-bind = $mod SHIFT, SPACE, exec, pkill -SIGUSR1 waybar  # Toggle Waybar
+bind = $mod SHIFT, SPACE, exec, $HOME/.local/share/archriot/install/archriot --waybar-reload  # Toggle Waybar
 unbind = $mod CTRL, SPACE
-bind = $mod CTRL, SPACE, exec, $HOME/bin/hyprland_swaybg-next  #Change Background Wallpaper
+bind = $mod CTRL, SPACE, exec, $HOME/bin/hyprland_swaybg-next  # Change Background Wallpaper
 
 # Notifications
 unbind = $mod, period
 unbind = $mod SHIFT, period
-bind = $mod, period, exec, makoctl dismiss  # Dismiss a notification
+bind = $mod, period, exec, makoctl dismiss              # Dismiss a notification
 bind = $mod SHIFT, period, exec, makoctl dismiss --all  # Dismiss all notifications
 
 # Clock (clock-rs)
@@ -110,29 +108,35 @@ bind = $mod CTRL, period, exec, $altterminal --class=clock-rs -o font_size=18 -o
 # -------------------------------------------------------------------------------------------------
 # Fix off-screen windows (manual trigger)
 unbind = $mod SHIFT, TAB
-bind = $mod SHIFT, TAB, exec, ~/.local/share/archriot/config/bin/scripts/fix-offscreen-windows.sh  # Center offscreen windows
+bind = $mod SHIFT, TAB, exec, $HOME/.local/share/archriot/install/archriot --fix-offscreen-windows  # Center offscreen windows
 
 # Window actions
 unbind = $mod, V
 unbind = $mod, J
-unbind = $mod, TAB
 unbind = $mod, P
-#unbind = CTRL, TAB
-bind = $mod, V, togglefloating,  # Toggle floating window
-bind = $mod, J, togglesplit,  # Rearange windows
-bind = $mod, TAB, exec, ~/.local/share/archriot/config/bin/scripts/window-switcher.sh --all-workspaces  # Window switcher
-bind = $mod, P, pseudo
-#bind = CTRL, TAB, hyprexpo:expo, toggle
+bind = $mod, V, togglefloating   # Toggle floating window
+bind = $mod, J, togglesplit      # Rearange windows
+bind = $mod, P, pseudo           # Pseudo tile
 
-# Move focus
+# Window switchers
+unbind = $mod, TAB
+unbind = ALT, TAB
+unbind = ALT SHIFT, TAB
+#unbind = CTRL, TAB
+bind = $mod, TAB, exec, $HOME/.local/share/archriot/install/archriot --switch-window  # Window switcher
+bind = ALT, TAB, exec, hyprctl dispatch cyclenext visible             # Next visible window
+bind = ALT SHIFT, TAB, exec, hyprctl dispatch cyclenext prev visible  # Previous visible
+#bind = CTRL, TAB, hyprexpo:expo, toggle  # Show all workspaces
+
+# Move window focus
 unbind = $mod, left
 unbind = $mod, right
 unbind = $mod, up
 unbind = $mod, down
-bind = $mod, left, movefocus, l  # Move focus left
+bind = $mod, left, movefocus, l   # Move focus left
 bind = $mod, right, movefocus, r  # Move focus right
-bind = $mod, up, movefocus, u  # Move focus up
-bind = $mod, down, movefocus, d  # Move focus down
+bind = $mod, up, movefocus, u     # Move focus up
+bind = $mod, down, movefocus, d   # Move focus down
 
 # Switch workspaces
 unbind = $mod, 1
@@ -159,30 +163,30 @@ unbind = $mod SHIFT, left
 unbind = $mod SHIFT, right
 unbind = $mod SHIFT, up
 unbind = $mod SHIFT, down
-bind = $mod SHIFT, left, swapwindow, l  # Swap windows left
+bind = $mod SHIFT, left, swapwindow, l   # Swap windows left
 bind = $mod SHIFT, right, swapwindow, r  # Swap windows right
-bind = $mod SHIFT, up, swapwindow, u  # Swap windows up
-bind = $mod SHIFT, down, swapwindow, d  # Swap windows down
+bind = $mod SHIFT, up, swapwindow, u     # Swap windows up
+bind = $mod SHIFT, down, swapwindow, d   # Swap windows down
 
 # Move windows around (smart movement)
 unbind = $mod CTRL, left
 unbind = $mod CTRL, right
 unbind = $mod CTRL, up
 unbind = $mod CTRL, down
-bind = $mod CTRL, left, movewindow, l  # Smart-move windows left
+bind = $mod CTRL, left, movewindow, l   # Smart-move windows left
 bind = $mod CTRL, right, movewindow, r  # Smart-move windows right
-bind = $mod CTRL, up, movewindow, u  # Smart-move windows up
-bind = $mod CTRL, down, movewindow, d  # Smart-move windows down
+bind = $mod CTRL, up, movewindow, u     # Smart-move windows up
+bind = $mod CTRL, down, movewindow, d   # Smart-move windows down
 
 # Resize windows
 unbind = $mod, minus
 unbind = $mod, equal
 unbind = $mod SHIFT, minus
 unbind = $mod SHIFT, equal
-bind = $mod, minus, resizeactive, -100 0  # Resize windows left
-bind = $mod, equal, resizeactive, 100 0  # Resize windows right
-bind = $mod SHIFT, minus, resizeactive, 0 -100  # Resize windows up
-bind = $mod SHIFT, equal, resizeactive, 0 100  # Resize windows down
+bind = $mod, minus, resizeactive, -80 0  # Resize windows left
+bind = $mod, equal, resizeactive, 80 0   # Resize windows right
+bind = $mod SHIFT, minus, resizeactive, 0 -80  # Resize windows up
+bind = $mod SHIFT, equal, resizeactive, 0 80   # Resize windows down
 
 # Unified Fullscreen
 unbind = $mod, F
@@ -209,15 +213,15 @@ bind = $mod SHIFT, D, plugin:xtd:bringallfrom, 5  # Restore all previosly unfocu
 bindm = $mod, mouse:272, movewindow
 bindm = $mod, mouse:273, resizewindow
 bind = $mod, mouse_down, workspace, e+1  # Next Workspace
-bind = $mod, mouse_up, workspace, e-1  # Previous Workspace
+bind = $mod, mouse_up, workspace, e-1    # Previous Workspace
 
 # Media keys (hardware default)
-bindel = ,XF86AudioRaiseVolume, exec, ~/.local/share/archriot/config/bin/scripts/Volume.sh --inc
-bindel = ,XF86AudioLowerVolume, exec, ~/.local/share/archriot/config/bin/scripts/Volume.sh --dec
-bindel = ,XF86AudioMute, exec, ~/.local/share/archriot/config/bin/scripts/Volume.sh --toggle
-bindel = ,XF86AudioMicMute, exec, ~/.local/share/archriot/config/bin/scripts/Volume.sh --toggle-mic
-bindel = ,XF86MonBrightnessUp, exec, ~/.local/share/archriot/config/bin/scripts/Brightness.sh --up
-bindel = ,XF86MonBrightnessDown, exec, ~/.local/share/archriot/config/bin/scripts/Brightness.sh --down
+bindel = ,XF86AudioRaiseVolume, exec, $HOME/.local/share/archriot/install/archriot --volume inc
+bindel = ,XF86AudioLowerVolume, exec, $HOME/.local/share/archriot/install/archriot --volume dec
+bindel = ,XF86AudioMute, exec, $HOME/.local/share/archriot/install/archriot --volume toggle
+bindel = ,XF86AudioMicMute, exec, $HOME/.local/share/archriot/install/archriot --volume mic-toggle
+bindel = ,XF86MonBrightnessUp, exec, $HOME/.local/share/archriot/install/archriot --brightness up
+bindel = ,XF86MonBrightnessDown, exec, $HOME/.local/share/archriot/install/archriot --brightness down
 
 # Media controls (hardware default)
 bindl = , XF86AudioNext, exec, playerctl next
@@ -292,4 +296,5 @@ bind = $mod, L, exec, hyprlock  # Lock screen
 
 # Power menu
 unbind = $mod, ESCAPE
-bind = $mod, ESCAPE, exec, $HOME/.local/share/archriot/config/bin/power-menu  # Power menu
+bind = $mod, ESCAPE, exec, $HOME/.local/share/archriot/install/archriot --power-menu
+
