--- a/config/hypr/monitors.conf
+++ b/config/hypr/monitors.conf
@@ -44,8 +44,10 @@ exec-once = rm -rf /tmp/waybar_cava_--right.pid
 exec-once = rm -rf /tmp/waybar_cava_config_--left
 exec-once = rm -rf /tmp/waybar_cava_config_--right
 
+# Make sure plugins are properly loaded (due to timming issues)
 exec-once = hyprpm reload -nn
 
+# (Re)generate help keybind mapping on reload
 exec = generate_keybindings_help
 #__________________________________________________________________________________________________
 # ======================================= CUSTOM ENV VARS =========================================
