--- a/config/waybar/config
+++ b/config/waybar/config
@@ -30,7 +30,7 @@
     // CypherRiot theme specific overrides
     "custom/arch": {
         "format": "󰣇",
-        "on-click": "nwg-drawer -g Adwaita-dark || fuzzel",
+        "on-click": "nwg-drawer -c 4 -is 48 -spacing 15 -fm \"Noto Sans\" || fuzzel",
         "on-click-right": "pkill fuzzel || fuzzel",
         "tooltip": true,
         "tooltip-format": "Left-click: App Drawer | Right-click: Fuzzel"
