updated current configs

--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -26,7 +26,7 @@ env = HYPRCURSOR_SIZE,24
 exec-once = $HOME/.local/share/archriot/install/archriot --waybar-launch
 exec-once = mako
 exec-once = /usr/bin/hypridle
-exec-once = hyprsunset -t 3500
+# # # # # # exec-once = hyprsunset -t 3500  # Disabled via Control Panel  # Disabled via Control Panel  # Disabled via Control Panel  # Disabled via Control Panel  # Disabled via Control Panel  # Disabled via Control Panel
 exec-once = kanshi
 
 exec-once = $HOME/.local/share/archriot/install/archriot --startup-background
@@ -197,9 +197,9 @@ windowrulev2 = center, title:^(ArchRiot Control Panel)$
 windowrulev2 = size 900 85%, title:^(ArchRiot Control Panel)$
 
 # Floating terminal window rules
-# windowrulev2 = float, class:^(com.mitchellh.ghostty-floating)$
-# windowrulev2 = center, class:^(com.mitchellh.ghostty-floating)$
-# windowrulev2 = size 900 80%, class:^(com.mitchellh.ghostty-floating)$
+#windowrulev2 = float, class:^(com.mitchellh.ghostty-floating)$
+#windowrulev2 = center, class:^(com.mitchellh.ghostty-floating)$
+#windowrulev2 = size 900 80%, class:^(com.mitchellh.ghostty-floating)$
 
 windowrulev2 = size 52% 85%, floating:1, class:^(brave-.*)$
 
@@ -227,7 +227,7 @@ source = ~/.config/hypr/windowrules.conf
 # Input configuration
 input {
     kb_layout = us
-    kb_variant =
+    kb_variant = intl
     kb_model =
     kb_options =
     kb_rules =
@@ -298,6 +298,7 @@ animations {
 
     bezier = myBezier, 0.05, 0.9, 0.1, 1.05
 
+    # animation = NAME, ONOFF, SPEED, CURVE [,STYLE]
     animation = windows, 1, 7, myBezier
     animation = windowsOut, 1, 7, default, popin 80%
     animation = border, 1, 10, default
@@ -308,8 +309,10 @@ animations {
 
 # Layouts
 dwindle {
-    pseudotile = true
-    preserve_split = true
+    pseudotile = true       # tile floating windows
+    preserve_split = true   # dont change split orientation on resize
+    smart_split = false     # split orientation based on cursor position
+    default_split_ratio = 1 # 1=center(50/50), lower=bigger_left, higher=bigger_right
 }
 
 master {
@@ -492,19 +495,19 @@ source = ~/.config/hypr/keybindings.conf
 # Keep things snappy on Intel Core Ultra iGPU: short animations, no blur, lighter shadows
 # These override earlier values (Hyprland uses last-wins semantics)
 
-decoration {
-    inactive_opacity = 1.0
+# decoration {
+#     inactive_opacity = 1.0
 
-    blur {
-        enabled = false
-    }
+#     blur {
+#         enabled = false
+#     }
 
-    shadow {
-        enabled = true
-        range = 3
-        render_power = 1
-    }
-}
+#     shadow {
+#         enabled = true
+#         range = 3
+#         render_power = 1
+#     }
+# }
 
 animations {
     enabled = true
