--- a/config/hypr/keybindings.conf
+++ b/config/hypr/keybindings.conf
@@ -33,19 +33,21 @@ unbind = $mod, R
 bind = $mod, R, exec, $altterminal --class=mpd-player -o background_opacity=0.5 -e rmpc # MPD Player
 # System monitor
 unbind = $mod, T
-bind = $mod, T, exec, $terminal -e btop  # System Monitor
+bind = $mod, T, exec, $terminal --title=btop -e btop  # System Monitor
 
 # Wallet
 unbind = $mod SHIFT, R
 bind = $mod SHIFT, R, exec, $HOME/.local/share/archriot/install/archriot --wallet
 
 # Default Editors
+unbind = $mod, G
+bind = $mod, G, exec, gnome-text-editor  # Text Editor
 unbind = $mod, N
 bind = $mod, N, exec, $terminal -e nvim  # NeoVim
 unbind = $mod, C
-bind = $mod, C, exec, DRI_PRIME=1 code  # VSCode
+bind = $mod, C, exec, DRI_PRIME=1 code   # VSCode
 unbind = $mod, Z
-bind = $mod, Z, exec, $HOME/.local/share/archriot/install/archriot --zed  # Zed
+bind = $mod, Z, exec, zeditor            # Zed
 
 # Default and Alt Browsers
 unbind = $mod, B
@@ -89,9 +91,9 @@ bind = $mod SHIFT, H, exec, $browser --class=archriot-help --app="https://archri
 
 # Waybar toggle and theme switch
 unbind = $mod SHIFT, SPACE
-bind = $mod SHIFT, SPACE, exec, $HOME/.local/share/archriot/install/archriot --waybar-reload  # Toggle Waybar
+bind = $mod SHIFT, SPACE, exec, $HOME/.local/share/archriot/install/archriot --waybar-reload  # Reload Waybar
 unbind = $mod CTRL, SPACE
-bind = $mod CTRL, SPACE, exec, $HOME/bin/hyprland_swaybg-next  # Change Background Wallpaper
+bind = $mod CTRL, SPACE, exec, $HOME/bin/hyprland_swaybg-next  # Cycle Background Wallpaper
 
 # Notifications
 unbind = $mod, period
