--- a/config/hypr/monitors.conf
+++ b/config/hypr/monitors.conf
@@ -1,30 +1,35 @@
 #__________________________________________________________________________________________________
 # ===================================== MONITOR CONFIGURATION =====================================
-# Format: monitor = [port], resolution, position, scale
-# monitor=,preferred,auto,1.0
-
 # Change to 1.75 for fractional scaling or 1 if on a 1x display
 env = GDK_SCALE,1
 
+# Format: monitor = [port], resolution, position, scale
+# monitor=,preferred,auto,1.0
+# `hyprctl monitors`
+
 # TV (top-left landscape)
 monitor = DVI-D-1, 1920x1080@59.88, 0x0, 1.0
-
 # Samsung (left, portrait)
 monitor = HDMI-A-3, 1440x900@59.75, 1920x-375, 1.0, transform,1
-
 # Philips (center, landscape)
 monitor = HDMI-A-1, 1920x1080@59.88, 2820x0, 1.0
-
 # Samsung (right, portrait)
 monitor = DP-1, 1920x1080@59.88, 4740x-625, 1.0, transform,3
+
+# Map Wacom tablet to main monitor
+# `hyprctl devices`
+device {
+    name=wacom-one-by-wacom-m-pen
+    output=HDMI-A-1
+}
 
 #__________________________________________________________________________________________________
 # ==================================== WORKSPACE CONFIGURATION ====================================
 # Workspace persistent assignment
 workspace = 1, monitor:DVI-D-1, default:true, persistent:true
-workspace = 2, monitor:HDMI-A-3, default:true, persistent:true
+workspace = 2, monitor:HDMI-A-3, default:true, persistent:true, gapsin:3, gapsout:3
 workspace = 3, monitor:HDMI-A-1, default:true, persistent:true
-workspace = 4, monitor:DP-1, default:true, persistent:true
+workspace = 4, monitor:DP-1, default:true, persistent:true, gapsin:3, gapsout:3
 workspace = 5, name:minimized, persistent:false
 
 #__________________________________________________________________________________________________
@@ -35,10 +40,9 @@ exec-once = xrandr --output HDMI-A-1 --primary
 # Prefer dark themes on all gnome apps (fixes white system monitor)
 exec-once = gsettings set org.gnome.desktop.interface color-scheme 'prefer-dark'
 
-# Clean up waybar_cava.sh and cava before waybar starts!
+# Clean up waybar_cava.sh and cava **before waybar starts**!
 exec-once = pkill -f waybar_cava.sh
 exec-once = pkill cava
-#exec-once = rm -rf /tmp/waybar_cava* (safer being specific...)
 exec-once = rm -rf /tmp/waybar_cava_--left.pid
 exec-once = rm -rf /tmp/waybar_cava_--right.pid
 exec-once = rm -rf /tmp/waybar_cava_config_--left
@@ -49,6 +53,7 @@ exec-once = hyprpm reload -nn
 
 # (Re)generate help keybind mapping on reload
 exec = generate_keybindings_help
+
 #__________________________________________________________________________________________________
 # ======================================= CUSTOM ENV VARS =========================================
 # Set Hyprshot save location
