--- a/config/hypr/hyprlock.conf
+++ b/config/hypr/hyprlock.conf
@@ -10,7 +10,7 @@
 # Background with beautiful blur effect
 background {
     monitor =
-    path = /home/tarso/.local/share/archriot/backgrounds/riot_04.jpg
+    path = /home/tarso/Pictures/wallpapers/riot_04.jpg
     color = rgba(8, 9, 12, 1.0)  # Much darker fallback
 
     # Subtle blur effect
@@ -277,7 +277,7 @@ label {
     monitor = DVI-D-1
     # Programming jokes
     #text = cmd[update:900000] curl -s https://v2.jokeapi.dev/joke/Programming?type=single | jq -r '.joke' | fold -s -w 80 | awk -v width=80 '{n=int((width-length($0))/2); for(i=0;i<n;i++) printf " "; print $0}'
-    # Random quotes 
+    # Random quotes
     #text = cmd[update:900000] curl -s https://zenquotes.io/api/random | jq -r '.[0].q' | fold -s -w 80 | awk -v width=80 '{n=int((width-length($0))/2); for(i=0;i<n;i++) printf " "; print $0}'
     # Today's quote (w/ author)
     #text = cmd[] curl -s https://zenquotes.io/api/today | jq -r '"\n" + .[0].q + "\n- " + .[0].a' | fold -s -w 80 | awk -v width=80 '{n=int((width-length($0))/2); for(i=0;i<n;i++) printf " "; print $0}'
