--- a/config/hypr/keybindings.conf
+++ b/config/hypr/keybindings.conf
@@ -3,24 +3,48 @@
 # - Use `find` to make sure it's not already in use in THIS FILE.
 # - Inline descriptions will be used by the script to generate the help panel.
 # - Binds without inline description will NOT show on the generated help panel.
-# - Run `generate_keybindings_help` and bind to $webapp="file:///path/to/help.html".
+# - `unbind` default keys you don't use to disable their behavior and unclutter the panel.
 # =================================================================================================
 
-# Custom apps:
+# -------------------------------------------------------------------------------------------------
+# Custom apps
+# -------------------------------------------------------------------------------------------------
 $altterminal = kitty
 $dropterm = xterm -bg black -fg white -fa 'Monospace' -fs 12 -e bash
 $altbrowser = firefox
 
 # -------------------------------------------------------------------------------------------------
+# Unused default keys (unbound to disable behavior/unclutter panel)
+# -------------------------------------------------------------------------------------------------
+unbind = $mod, slash
+unbind = $mod, comma
+unbind = $mod SHIFT, W
+unbind = $mod SHIFT, F
+unbind = $mod, PRINT
+unbind = CTRL, PRINT
+unbind = $mod, 5
+unbind = $mod, 6
+unbind = $mod, 7
+unbind = $mod, 8
+unbind = $mod, 9
+unbind = $mod, 0
+unbind = $mod SHIFT, 5
+unbind = $mod SHIFT, 6
+unbind = $mod SHIFT, 7
+unbind = $mod SHIFT, 8
+unbind = $mod SHIFT, 9
+unbind = $mod SHIFT, 0
+
+# Start/Stop screensaver (for debugging)
+unbind = $mod, X
+unbind = $mod SHIFT, X
+bind = $mod, X, exec, pkill -f screenriot
+bind = $mod SHIFT, X, exec, kitty --title srlauncher --hold -o background_opacity=0.0 -e $HOME/bin/screenriot
+
+# -------------------------------------------------------------------------------------------------
 # Main Shortcuts
 # -------------------------------------------------------------------------------------------------
-# Default Terminal
-unbind = $mod, return
-bind = $mod, return, exec, $terminal  # Default terminal
-
-# Flying terminal
-unbind = $mod SHIFT, return
-bind = $mod SHIFT, return, exec, $terminal --class=com.mitchellh.ghostty-floating # Default terminal (flying)
+# Terminal
 unbind = $mod ALT, SPACE
 bind = $mod ALT, SPACE, exec, ~/bin/dropterminal "$dropterm"  # Dropdown terminal
 
@@ -31,43 +55,29 @@ bind = $mod, E, exec, $fileManager  # Thunar file manager
 # Default MPD player
 unbind = $mod, R
 bind = $mod, R, exec, $altterminal --class=mpd-player -o background_opacity=0.5 -e rmpc # MPD Player
-# System monitor
-unbind = $mod, T
-bind = $mod, T, exec, $terminal --title=btop -e btop  # System Monitor
-
-# Wallet
-unbind = $mod SHIFT, R
-bind = $mod SHIFT, R, exec, $HOME/.local/share/archriot/install/archriot --wallet
 
 # Default Editors
 unbind = $mod, G
 bind = $mod, G, exec, gnome-text-editor  # Text Editor
-unbind = $mod, N
-bind = $mod, N, exec, $terminal -e nvim  # NeoVim
 unbind = $mod, C
 bind = $mod, C, exec, DRI_PRIME=1 code   # VSCode
-unbind = $mod, Z
-bind = $mod, Z, exec, zeditor            # Zed
 
 # Default and Alt Browsers
-unbind = $mod, B
 unbind = $mod SHIFT, B
-bind = $mod, B, exec, $browser  # Brave
 bind = $mod SHIFT, B, exec, DRI_PRIME=1 $altbrowser  # Firefox
-
-# App launcher
-unbind = $mod, space
-bind = $mod, space, exec, fuzzel  # App Launcher
+unbind = $mod CTRL, B
+bind = $mod CTRL, B, exec, qutebrowser # Qutebrowser
 
 # App Closer
-unbind = $mod, Q
-bind = $mod, Q, killactive  # Close active window
 # Close all unfocused windows on the current workspace
 unbind = $mod SHIFT, Q
 bind = $mod SHIFT, Q, plugin:xtd:closeunfocused  # Close all unfocused windows in current workspace
 # Close all windows in all workspaces
 unbind = CTRL ALT, backspace
-bind = CTRL ALT, backspace, exec, $HOME/bin/hyprland_closeall # Close all windows on all workspaces
+bind = CTRL ALT, backspace, exec, $HOME/bin/hyprland_closeall # Close all windows in all workspaces
+# Kill processes using fuzzel
+unbind = $mod CTRL, backspace
+bind = $mod CTRL, backspace, exec, $HOME/bin/killmenu  # Fuzzy Kill
 
 # Open all custom windows (see script for list/positions)
 unbind = $mod, backspace
@@ -77,118 +87,26 @@ bind = $mod, backspace, exec, $HOME/bin/hyprland_openall
 unbind = $mod, F12
 bind = $mod, F12, exec, notify-send "Opening Control Panel..." && DISPLAY=:0 $HOME/.local/share/archriot/config/bin/archriot-control-panel  # ArchRiot Control Panel
 
-# Pomodoro Timer
-unbind = $mod, comma
-bind = $mod, comma, exec, $HOME/.local/share/archriot/install/archriot --pomodoro-click  # Pomodoro Timer
-
 # Help system
 unbind = $mod, H
-unbind = $mod CTRL, H
 unbind = $mod SHIFT, H
-bind = $mod, H, exec, $webapp="file:///home/tarso/help.html"  # Keybind Mapping
-bind = $mod CTRL, H, exec, $HOME/.local/share/archriot/install/archriot --help-binds-gtk  # ArchRiot Default Keymapper
+bind = $mod, H, exec, $HOME/.local/share/archriot/install/archriot --help-binds-web  # Keybind Mapping
 bind = $mod SHIFT, H, exec, $browser --class=archriot-help --app="https://archriot.org"   # ArchRiot Help System
 
-# Waybar toggle and theme switch
-unbind = $mod SHIFT, SPACE
-bind = $mod SHIFT, SPACE, exec, $HOME/.local/share/archriot/install/archriot --waybar-reload  # Reload Waybar
+# Theme switch
 unbind = $mod CTRL, SPACE
 bind = $mod CTRL, SPACE, exec, $HOME/bin/hyprland_swaybg-next  # Cycle Background Wallpaper
 
-# Notifications
-unbind = $mod, period
-unbind = $mod SHIFT, period
-bind = $mod, period, exec, makoctl dismiss              # Dismiss a notification
-bind = $mod SHIFT, period, exec, makoctl dismiss --all  # Dismiss all notifications
-
 # Clock (clock-rs)
 unbind = $mod CTRL, period
-bind = $mod CTRL, period, exec, $altterminal --class=clock-rs -o font_size=18 -o background_opacity=0.0 -e clock-rs -c bright-blue
+bind = $mod CTRL, period, exec, $altterminal --class=clock-rs -o font_size=18 -o background_opacity=0.0 -e clock-rs -c bright-blue # Clock
 
 # -------------------------------------------------------------------------------------------------
 # Window Management
 # -------------------------------------------------------------------------------------------------
-# Fix off-screen windows (manual trigger)
-unbind = $mod SHIFT, TAB
-bind = $mod SHIFT, TAB, exec, $HOME/.local/share/archriot/install/archriot --fix-offscreen-windows  # Center offscreen windows
-
 # Window actions
-unbind = $mod, V
-unbind = $mod, J
-unbind = $mod, P
-bind = $mod, V, togglefloating   # Toggle floating window
-bind = $mod, J, togglesplit      # Rearange windows
-bind = $mod, P, pseudo           # Pseudo tile
-
-# Window switchers
-unbind = $mod, TAB
-unbind = ALT, TAB
-unbind = ALT SHIFT, TAB
-#unbind = CTRL, TAB
-bind = $mod, TAB, exec, $HOME/.local/share/archriot/install/archriot --switch-window  # Window switcher
-bind = ALT, TAB, exec, hyprctl dispatch cyclenext visible             # Next visible window
-bind = ALT SHIFT, TAB, exec, hyprctl dispatch cyclenext prev visible  # Previous visible
-#bind = CTRL, TAB, hyprexpo:expo, toggle  # Show all workspaces
-
-# Move window focus
-unbind = $mod, left
-unbind = $mod, right
-unbind = $mod, up
-unbind = $mod, down
-bind = $mod, left, movefocus, l   # Move focus left
-bind = $mod, right, movefocus, r  # Move focus right
-bind = $mod, up, movefocus, u     # Move focus up
-bind = $mod, down, movefocus, d   # Move focus down
-
-# Switch workspaces
-unbind = $mod, 1
-unbind = $mod, 2
-unbind = $mod, 3
-unbind = $mod, 4
-bind = $mod, 1, workspace, 1  # Move to Workspace 1
-bind = $mod, 2, workspace, 2  # Move to Workspace 2
-bind = $mod, 3, workspace, 3  # Move to Workspace 3
-bind = $mod, 4, workspace, 4  # Move to Workspace 4
-
-# Move windows to workspaces
-unbind = $mod SHIFT, 1
-unbind = $mod SHIFT, 2
-unbind = $mod SHIFT, 3
-unbind = $mod SHIFT, 4
-bind = $mod SHIFT, 1, movetoworkspace, 1  # Move window to Workspace 1
-bind = $mod SHIFT, 2, movetoworkspace, 2  # Move window to Workspace 2
-bind = $mod SHIFT, 3, movetoworkspace, 3  # Move window to Workspace 3
-bind = $mod SHIFT, 4, movetoworkspace, 4  # Move window to Workspace 4
-
-# Swap windows
-unbind = $mod SHIFT, left
-unbind = $mod SHIFT, right
-unbind = $mod SHIFT, up
-unbind = $mod SHIFT, down
-bind = $mod SHIFT, left, swapwindow, l   # Swap windows left
-bind = $mod SHIFT, right, swapwindow, r  # Swap windows right
-bind = $mod SHIFT, up, swapwindow, u     # Swap windows up
-bind = $mod SHIFT, down, swapwindow, d   # Swap windows down
-
-# Move windows around (smart movement)
-unbind = $mod CTRL, left
-unbind = $mod CTRL, right
-unbind = $mod CTRL, up
-unbind = $mod CTRL, down
-bind = $mod CTRL, left, movewindow, l   # Smart-move windows left
-bind = $mod CTRL, right, movewindow, r  # Smart-move windows right
-bind = $mod CTRL, up, movewindow, u     # Smart-move windows up
-bind = $mod CTRL, down, movewindow, d   # Smart-move windows down
-
-# Resize windows
-unbind = $mod, minus
-unbind = $mod, equal
-unbind = $mod SHIFT, minus
-unbind = $mod SHIFT, equal
-bind = $mod, minus, resizeactive, -80 0  # Resize windows left
-bind = $mod, equal, resizeactive, 80 0   # Resize windows right
-bind = $mod SHIFT, minus, resizeactive, 0 -80  # Resize windows up
-bind = $mod SHIFT, equal, resizeactive, 0 80   # Resize windows down
+unbind = $mod SHIFT, P
+bind = $mod SHIFT, P, pseudo     # Pseudo tile
 
 # Unified Fullscreen
 unbind = $mod, F
@@ -211,26 +129,6 @@ bind = $mod SHIFT, D, plugin:xtd:bringallfrom, 5  # Restore all previosly unfocu
 # -------------------------------------------------------------------------------------------------
 # Media Bindings
 # -------------------------------------------------------------------------------------------------
-# Mouse bindings (KDE mouse defaults)
-bindm = $mod, mouse:272, movewindow
-bindm = $mod, mouse:273, resizewindow
-bind = $mod, mouse_down, workspace, e+1  # Next Workspace
-bind = $mod, mouse_up, workspace, e-1    # Previous Workspace
-
-# Media keys (hardware default)
-bindel = ,XF86AudioRaiseVolume, exec, $HOME/.local/share/archriot/install/archriot --volume inc
-bindel = ,XF86AudioLowerVolume, exec, $HOME/.local/share/archriot/install/archriot --volume dec
-bindel = ,XF86AudioMute, exec, $HOME/.local/share/archriot/install/archriot --volume toggle
-bindel = ,XF86AudioMicMute, exec, $HOME/.local/share/archriot/install/archriot --volume mic-toggle
-bindel = ,XF86MonBrightnessUp, exec, $HOME/.local/share/archriot/install/archriot --brightness up
-bindel = ,XF86MonBrightnessDown, exec, $HOME/.local/share/archriot/install/archriot --brightness down
-
-# Media controls (hardware default)
-bindl = , XF86AudioNext, exec, playerctl next
-bindl = , XF86AudioPause, exec, playerctl play-pause
-bindl = , XF86AudioPlay, exec, playerctl play-pause
-bindl = , XF86AudioPrev, exec, playerctl previous
-
 # Screenshots (save to file)
 unbind = , PRINT
 unbind = SHIFT, PRINT
@@ -239,7 +137,7 @@ bind = , PRINT, exec, hyprshot -m region       # Screenshot region
 bind = SHIFT, PRINT, exec, hyprshot -m window  # Screenshot window
 bind = CTRL, PRINT, exec, hyprshot -m output   # Screenshot output
 # Screenshots (clipboard only)
-unbind = $mod , S
+unbind = $mod, S
 unbind = $mod SHIFT, S
 unbind = $mod CTRL, S
 bind = $mod, S, exec, hyprshot -m region --clipboard-only        # Screenshot region (clipboard only)
@@ -254,9 +152,6 @@ bind = $mod, P, exec, hyprpicker -a  # Color picker
 # -------------------------------------------------------------------------------------------------
 # Brave WebApp Bindings
 # -------------------------------------------------------------------------------------------------
-# Mail key binding
-bind = , XF86Mail, exec, $webapp="https://mail.google.com/"
-
 # Google Mail
 unbind = $mod, M
 bind = $mod, M, exec, $webapp="https://mail.google.com/"  # GMail
@@ -288,15 +183,3 @@ bind = $mod CTRL, A, exec, $webapp="https://gemini.google.com/"  # Gemini AI
 # O!MPD
 unbind = $mod, O
 bind = $mod, O, exec, $webapp="http://media.server.lan/ompd"  # O!MPD
-
-# -------------------------------------------------------------------------------------------------
-# System Control
-# -------------------------------------------------------------------------------------------------
-# Lock screen
-unbind = $mod, L
-bind = $mod, L, exec, hyprlock  # Lock screen
-
-# Power menu
-unbind = $mod, ESCAPE
-bind = $mod, ESCAPE, exec, $HOME/.local/share/archriot/install/archriot --power-menu
-
