--- a/config/waybar/config
+++ b/config/waybar/config
@@ -3,96 +3,98 @@
     {
         "include": [
             "$HOME/.config/waybar/Modules",
-            "$HOME/.config/waybar/ModulesWorkspaces",
             "$HOME/.config/waybar/ModulesCustom",
             "$HOME/.config/waybar/ModulesGroups",
-            "$HOME/.config/waybar/UserWorkspaces",
-            "$HOME/.config/waybar/UserModules"
+            "$HOME/.config/waybar/UserWorkspaces"
         ],
 
         // ----- WAYBAR SETTINGS:
         "output": ["HDMI-A-1"],
         "fixed-center": true,
-        "margin-left": 8,
+        "margin-left": 300,
+        "margin-right": 300,
         "spacing": 10,
         "passthrough": false,
         "exclusive": true,
-        "margin-top": 3,
+        "margin-top": 1,
+        "margin-bottom": 1,
         "position": "top",
-        "ipc": false,
         "layer": "top",
-        "margin-right": 8,
+        "ipc": false,
 
         // ----- LEFT
         "modules-left": [
-            "hyprland/workspaces#pacman-rwc",
+            "custom/separator#blank",
+            "hyprland/workspaces#pacman-rwc"
         ],
 
         // ----- CENTER
         "modules-center": [
             "hyprland/window"
         ],
-        
+
         // ----- RIGHT
         "modules-right": [
             "tray",
-            "custom/separator#blank",
             "custom/archriot-update",
-            "clock"
+            "clock",
+            "custom/separator#blank"
         ]
     },
 
     // ===== Portrait Right (DP-1)
-    {   // Bottom bar
+    {   // Bottom center bar
         "include": [
             "$HOME/.config/waybar/ModulesCustom",
             "$HOME/.config/waybar/Modules",
             "$HOME/.config/waybar/ModulesGroups"
         ],
-        
-        "output": ["DP-1"],
-        "margin-bottom": 3,
-        "position": "bottom",
-        "margin-left": 8,
-        "margin-right": 8,
 
-        "modules-left": [
-            "custom/volume-bar"
-        ],
+        "output": ["DP-1"],
+        "height": 50,
+        "margin-top": 1,
+        "margin-bottom": 10,
+        "position": "bottom",
+        "margin-left": 400,
+        "margin-right": 400,
+        "spacing":30,
 
         "modules-center": [
-            "group/system-metrics"
+            "custom/separator#blank",
+            "custom/volume-bar",
+            "custom/separator#blank",
+            "custom/separator#blank",
+            "group/system-metrics",
+            "custom/separator#blank",
+            "custom/separator#blank",
+            "network",
+            "custom/separator#blank",
         ],
-
-        "modules-right": [
-            "network"
-        ]
     },
 
     // ===== Portrait Left (HDMI-A-3)
     {   // Bottom bar
         "include": [
             "$HOME/.config/waybar/ModulesCustom",
-            "$HOME/.config/waybar/Modules"
+            "$HOME/.config/waybar/Modules",
+            "$HOME/.config/waybar/UserModules"
         ],
-        
+
         "output": ["HDMI-A-3"],
-        "margin-bottom": 3,
+        "height": 35,
+        "margin-top": 1,
+        "margin-bottom": 8,
+        "margin-left": 170,
+        "margin-right": 170,
         "position": "bottom",
-        
+        "spacing": 10,
+
         "modules-center": [
+            "custom/separator#blank",
             "custom/cava_left",
             "mpris",
-            "custom/cava_right"
-        ],
-        
-        "custom/cava_left": {
-            "format": "{}",
-            "exec": "~/bin/waybar_cava.sh --left"
-        },
-        "custom/cava_right": {
-            "format": "{}",
-            "exec": "~/bin/waybar_cava.sh --right"
-        }
+            "custom/cava_right",
+            "custom/separator#blank"
+        ]
     }
 ]
